--- a/app/views/cover/cover.html
+++ b/app/views/cover/cover.html
@@ -1,4 +1,19 @@
-<div id="coverPage" class="home-screen-cover cover1" style="">
+<div id="coverPage" class="home-screen-cover" >
+	<div class="swiper-container cover-swiper-container">
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper cover-swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide cover-swiper-slide"></div>
+        <div class="swiper-slide cover-swiper-slide"></div>
+        <div class="swiper-slide cover-swiper-slide"></div>
+        <div class="swiper-slide cover-swiper-slide"></div>
+        <div class="swiper-slide cover-swiper-slide"></div>
+        <div class="swiper-slide cover-swiper-slide"></div>
+    </div>
+    <!-- If we need pagination -->
+    <div class="swiper-pagination cover-swiper-pagination"></div>
+    
+</div>
 	<div class="content-wrapper">
 		<div class="container">
 			<div class="main-content text-center vertical-center">
