--- a/app/views/footer/footer.html
+++ b/app/views/footer/footer.html
@@ -57,12 +57,12 @@
       <div class="h4">NEED HELP?</div>
       <ul>
          <li>Call us on</li>
-         <li itemprop="telephone">
+         <a href='tel:+917222034001'><li itemprop="telephone">
             <strong>+917222034001</strong>
-         </li>
+         </li></a>
          <li>or</li>
          <li>Write to us</li>
-         <li itemprop="email">lepartycious@gmail.com</li>
+         <a href="mailto:lepartycious@gmail.com"><li itemprop="email">lepartycious@gmail.com</li></a>
       </ul>
    </div>
 </footer>
