--- a/app/views/home/home.html
+++ b/app/views/home/home.html
@@ -95,7 +95,7 @@
 		OUR PORTFOLIO
 	</div>
 	<!-- Slider main container -->
-	<div class="swiper-container">
+	<div class="swiper-container portfolio-swiper-container">
 		<!-- Additional required wrapper -->
 		<div class="swiper-wrapper">
 			<!-- Slides -->
