--- a/app/views/data/data.html
+++ b/app/views/data/data.html
@@ -1,6 +1,6 @@
 
 <div class='row data-list'>
-	<div class='col-xs-12 col-sm-3' ng-if="vm.resultList.length > 0">
+	<div class='col-xs-12 col-sm-3'>
 		<div class='col-xs-12'>
 			<h4 class='theme-color'>FILTERS</h4>
 			<div class="filters">
@@ -58,7 +58,7 @@
 	</div>
 	
 	<!-- For Handling No Record Found Page -->
-			<div class="no-records-found col-xs-12" ng-if="vm.resultList.length == 0">
+			<div class="no-records-found col-xs-12 col-sm-8" ng-if="vm.resultList.length == 0">
 							<div>
 								<h2>No Results Found!!</h2>
 								<img src="/images/no_content-found_image.png" height="250px;"/>
