--- a/app/views/home/contactus.html
+++ b/app/views/home/contactus.html
@@ -2,18 +2,18 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <button type="button" class="close" data-dismiss="modal" ng-click="vm.submitted=false;" aria-hidden="true">×</button>
         <h3 id="myModalLabel">We'd Love to Serve You</h3>
       </div>
       <div class="modal-body">
         <form name="form.contactForm" class="col-sm-12">
         	<span style="color:brown;">All Fields marked with * are mandatory.</span>
         <div class="form-group" style="margin-top:10px;"><label class="required">Name</label><input class="form-control required" placeholder="Your name" type="text" ng-model="vm.contactForm.name" name="name" required>
-          <span style="color:brown;" ng-show="form.contactForm.name.$touched && form.contactForm.name.$invalid">Name is mandatory.</span>
+          <span style="color:brown;" ng-show="(form.contactForm.name.$touched || vm.submitted) && form.contactForm.name.$invalid">Name is mandatory.</span>
       	</div>
 
           <div class="form-group"><label class="required">Message</label><textarea class="form-control" placeholder="Your message here.." ng-model="vm.contactForm.message" name="message" required></textarea>
-          	<span style="color:brown;" ng-show="form.contactForm.message.$touched && form.contactForm.message.$invalid">Message is mandatory.</span>
+          	<span style="color:brown;" ng-show="(form.contactForm.message.$touched || vm.submitted) && form.contactForm.message.$invalid">Message is mandatory.</span>
           </div>
 
           <div class="form-group"><label>E-Mail</label><input class="form-control email" placeholder="email@you.com (so that we can contact you)" type="email" name="email" ng-model="vm.contactForm.email" ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
@@ -21,8 +21,8 @@
           </div>
 
           <div class="form-group"><label class="required">Phone</label><input class="form-control phone" type="text" ng-model="vm.contactForm.phoneNumber" placeholder="Your Contact Number" name="phone" required ng-pattern="/^[0-9]{10}$/">
-          	<span style="color:brown;" ng-show="form.contactForm.phone.$touched && form.contactForm.phone.$error.required">Phone is mandatory.</span>
-          	<span style="color:brown;" ng-show="form.contactForm.phone.$touched && form.contactForm.phone.$error.pattern">Phone is Invalid.</span>
+          	<span style="color:brown;" ng-show="(form.contactForm.phone.$touched || vm.submitted) && form.contactForm.phone.$error.required">Phone is mandatory.</span>
+          	<span style="color:brown;" ng-show="form.contactForm.phone.$touched  && form.contactForm.phone.$error.pattern">Phone is Invalid.</span>
           </div>
 
           <div class="form-group"><label class="required">Test your math skill</label>
@@ -36,7 +36,7 @@
       </div>
       <div class="modal-footer">
       	<button type="button" ng-click="vm.submitted=true;form.contactForm.$valid && captchaValid &&vm.submitEnquiry();" class="btn btn-success">Enquire!</button>
-        <button class="btn pull-right" data-dismiss="modal" aria-hidden="true">Cancel</button>
+        <button class="btn pull-right" data-dismiss="modal" ng-click="vm.submitted=false;" aria-hidden="true">Cancel</button>
       </div>
     </div>
   </div>
