--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -12,7 +12,10 @@
 	width: 100%;
 	height: 400px;
 	color: #ffffff;
-	height: 500px;	
+	height: 500px;
+			background-repeat: no-repeat !important;
+	background-size: cover !important;
+	background-position: center center !important;	
 }
 
 
