--- a/app/views/data/data.html
+++ b/app/views/data/data.html
@@ -35,7 +35,7 @@
 					
 						<a href="" ng-click="vm.fetchDetails(result.name);" class="pamphlet-anchor">
 						<div class="pamphlet-container">
-							<div class="pamphlet-header">
+							<div class="pamphlet-header pamphlet-header-minHeight">
 									<div class="featured-ribbon"><span class="featured-ribbon-text">LE PARTYCIOUS</span></div>
 								<img src="{{vm.getImageURL(result.mainImagerURL)}}" alt='cover-photo' class="vertical-center"></img>
 
