--- a/app/views/footer/footer.html
+++ b/app/views/footer/footer.html
@@ -62,7 +62,7 @@
          </li></a>
          <li>or</li>
          <li>Write to us</li>
-         <a href="mailto:lepartycious@gmail.com"><li itemprop="email">lepartycious@gmail.com</li></a>
+         <a href="mailto:lepartycious@gmail.com"><li itemprop="email"><strong>lepartycious@gmail.com</strong></li></a>
       </ul>
    </div>
 </footer>
