--- a/app/views/home/home.html
+++ b/app/views/home/home.html
@@ -32,7 +32,7 @@
 		<div class="h2 theme-color">
 			WHAT DO WE HAVE FOR YOU
 		</div>
-		<div class="col-xs-12 col-sm-6 col-md-4">
+		<div class="col-xs-12 col-sm-6 col-md-4 home-page-icons">
 			<div>
 				<span class="lp-venue-icon lp-sprite"></span>
 			</div>
@@ -41,7 +41,7 @@
 				A perfect venue for you
 			</p>
 		</div>
-		<div class="col-xs-12 col-sm-6 col-md-4">
+		<div class="col-xs-12 col-sm-6 col-md-4 home-page-icons">
 			<div>
 				<span class="lp-decor-icon lp-sprite"></span>
 			</div>
@@ -50,7 +50,7 @@
 				Because theme matters
 			</p>
 		</div>
-		<div class="col-xs-12 col-sm-6 col-md-4">
+		<div class="col-xs-12 col-sm-6 col-md-4 home-page-icons">
 			<div>
 				<span class="lp-caterer-icon lp-sprite"></span>
 			</div>
@@ -60,7 +60,7 @@
 			</p>
 		</div>
 
-		<div class="col-xs-12 col-sm-6 col-md-4">
+		<div class="col-xs-12 col-sm-6 col-md-4 home-page-icons">
 			<div>
 				<span class="lp-photography-icon lp-sprite"></span>
 			</div>
@@ -69,22 +69,22 @@
 				Reliving the memories
 			</p>
 		</div>
-		<div class="col-xs-12 col-sm-6 col-md-4">
+		<div class="col-xs-12 col-sm-6 col-md-4 home-page-icons">
 			<div>
-				<span class="lp-rental-icon lp-sprite"></span>
+				<span class="lp-entertainment-icon lp-sprite"></span>
 			</div>
-			<h3>RENTAL</h3>
+			<h3>ENTERTAINMENT</h3>
 			<p>
-				Renting things is easy now
+				Feelings the beats within you
 			</p>
 		</div>
-		<div class="col-xs-12 col-sm-6 col-md-4">
+		<div class="col-xs-12 col-sm-6 col-md-4 home-page-icons">
 			<div>
-				<span class="lp-hospitality-icon lp-sprite"></span>
+				<span class="lp-others-icon lp-sprite"></span>
 			</div>
-			<h3>HOSPITALITY</h3>
+			<h3>MISCELLANEOUS</h3>
 			<p>
-				Taking care of your needs
+				Small things, large impact
 			</p>
 		</div>
 	</div>
