--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -137,32 +137,37 @@
 	background-image: url('/images/spritesheet.png');
 	background-repeat: no-repeat;
 	display: inline-block;
-	width: 72px;
-	height: 72px;
+	width: 64px;
+	height: 64px;
 }
 
 .lp-venue-icon {
-	background-position: -169px -87px;
+	background-position: -153px -79px;
 }
 
 .lp-caterer-icon {
-	background-position: -87px -5px;
+	background-position: -79px -5px;
 }
 
 .lp-decor-icon {
-	background-position: -5px -87px;
+	background-position: -5px -79px;
 }
 
 .lp-photography-icon {
 	background-position: -5px -5px;
 }
 
-.lp-rental-icon {
-	background-position: -169px -5px;
+.lp-entertainment-icon {
+	background-position: -79px -79px;
 }
 
-.lp-hospitality-icon {
-	background-position: -87px -87px;
+.lp-others-icon {
+	background-position: -153px -5px;
+}
+
+.home-page-icons{
+	padding-top: 5px;
+	padding-bottom: 5px;
 }
 
 .portfolioSlider .swiper-container {
