--- a/app/views/detail/detail.html
+++ b/app/views/detail/detail.html
@@ -136,7 +136,7 @@
 		<div class="col-xs-12 col-sm-4">
 			<!-- Adding recommended section for the User -->
 
-			<div class="pamphlet-container recommended-pamphlet">
+			<div class="pamphlet-container recommended-pamphlet" ng-if="vm.detailedData.recommendationList.length > 0">
 				<div class="pamphlet-header recommended-pamphlet-header">
 					<div class="pamphlet-title recommended-pamphlet-title">
 						Recommended by Us
