--- a/app/views/home/home.html
+++ b/app/views/home/home.html
@@ -75,7 +75,7 @@
 			</div>
 			<h3>ENTERTAINMENT</h3>
 			<p>
-				Feelings the beats within you
+				Feeling the beats within you
 			</p>
 		</div>
 		<div class="col-xs-12 col-sm-6 col-md-4 home-page-icons">
