--- a/app/views/detail/detail.html
+++ b/app/views/detail/detail.html
@@ -5,9 +5,9 @@
 		</button>
 	</div>
 	<div class="row">
-		<div class="details-container row">
+		<div class="details-container col-xs-12">
 			<div class="col-xs-12 col-sm-offset-1 col-sm-6">
-				<div class="row">
+				
 					<h2 class="details-name">{{vm.detailedData.name}}</h2>
 					<div class="details-address">
 						{{vm.detailedData.addressLine1}} {{vm.detailedData.addressLine2}}
@@ -18,7 +18,7 @@
 					<div class="details-telephone">
 						{{vm.detailedData.primaryPhoneNumber}}, {{vm.detailedData.secondaryPhoneNumber}}
 					</div>
-				</div>
+				
 			</div>
 		</div>
 	</div>
@@ -26,7 +26,7 @@
 	<div class="row bg-grey">
 		<div class="gap20"></div>
 		<div class="col-xs-12 col-sm-offset-1 col-sm-6">
-			<div class="row">
+			<!--<div class="row">-->
 				<!--Adding Description for the vendor-->
 				<div class="pamphlet-container details-pamphlet">
 					<div class="pamphlet-header">
@@ -131,7 +131,7 @@
 						<div id="map"></div>
 					</div>
 				</div>
-			</div>
+			<!--</div>-->
 		</div>
 		<div class="col-xs-12 col-sm-4">
 			<!-- Adding recommended section for the User -->
@@ -153,7 +153,7 @@
 					</div>
 					<div class="pamphlet-body">
 						<div class="pamphlet-body">
-								<div class="pamphlet-title col-xs-12 text-center">
+								<div class="pamphlet-title col-xs-12 text-center recommended-small-font">
 									<div class="row">
 									<div class="col-xs-8 text-left pamphlet-title-desc"><div>{{reccomendation.name}}</div><span class="pamphlet-title-city">{{reccomendation.locality}}</span></div>
 									<div class="col-xs-4 text-left pamphlet-title-price border-left-1px"><div>Starts from</div><span class="fa fa-fw fa-inr theme-color"></span><span class="pamphlet-title-rate theme-color">{{reccomendation.startingPrice}}</span></div>
