--- a/app/views/detail/detail.html
+++ b/app/views/detail/detail.html
@@ -172,7 +172,7 @@
 	<!--<div data-ng-include="'views/gallery/gallery.html'"></div>-->
 	
 	<div class="gallery-container" data-ng-class="vm.show ? 'show' : ''">
-	<div class="gallery-overlay col-xs-9">
+	<div class="gallery-overlay col-xs-12 col-sm-9">
 		    <div class="swiper-container gallery-top">
         <div class="swiper-wrapper">
         	<div class="swiper-slide" data-ng-repeat="imageURL in vm.imagesURL" style="background-image:url({{imageURL}})"></div>
@@ -188,7 +188,7 @@
        </div>
        
 	</div>
-	<div class="gallery-side-panel col-xs-3">
+	<div class="gallery-side-panel col-sm-3 col-xs-12">
 		<div>
 		<div class="row">
 			<div class="col-xs-12">
