--- a/app/views/footer/footer.html
+++ b/app/views/footer/footer.html
@@ -65,5 +65,9 @@
          <a href="mailto:lepartycious@gmail.com"><li itemprop="email"><strong>lepartycious@gmail.com</strong></li></a>
       </ul>
    </div>
+   <div class="gap20"></div>
+   <div class="col-xs-12 lp-copyrights text-center">
+   	&copy; 2016 Le Partycious ALL RIGHTS RESERVED
+   </div>
 </footer>
 <div data-ng-include="'views/home/contactus.html'"></div>
