--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -117,6 +117,7 @@ a:hover, a:focus {
 .gap, .semi-gap, .quarter-gap, .gap20 {
 	display: block;
 	width: 100%;
+
 }
 .gap {
 	height: 100px;
@@ -131,6 +132,7 @@ a:hover, a:focus {
 
 .gap20 {
 	height: 20px;
+		float: left;
 }
 
 .bg-theme-color {
@@ -300,6 +302,11 @@ p.info, p.connect {
 
 .social a:hover span.fa-instagram {
     background: rgb(136, 142, 153);
+}
+
+.lp-copyrights{
+	border-top: 2px solid #ffffff;
+	padding-top: 8px;	
 }
 
 /* Footer css ends*/
@@ -694,6 +701,12 @@ background: white;
 	height: 50px;
 }
 
+#footer a{
+	color: #337ab7;
+	font-family: 'OpenSans-Bold';
+	text-decoration: underline;
+}
+
 
 }
 
@@ -720,7 +733,7 @@ background: white;
 		width: 95%;
 		/*position: absolute;*/
 		right: 20px;
-		background: rgba(73, 84, 91, 0.87);
+		/*background: rgba(73, 84, 91, 0.87);*/
 		top: 66px;
 		z-index: 111;
 	}
