--- a/app/views/home/contactus.html
+++ b/app/views/home/contactus.html
@@ -2,7 +2,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" ng-click="vm.submitted=false;" aria-hidden="true">×</button>
+        <button type="button" class="close"  ng-click="vm.closeContactForm();" aria-hidden="true">×</button>
         <h3 id="myModalLabel">We'd Love to Serve You</h3>
       </div>
       <div class="modal-body">
@@ -36,7 +36,7 @@
       </div>
       <div class="modal-footer">
       	<button type="button" ng-click="vm.submitted=true;form.contactForm.$valid && captchaValid &&vm.submitEnquiry();" class="btn btn-success">Enquire!</button>
-        <button class="btn pull-right" data-dismiss="modal" ng-click="vm.submitted=false;" aria-hidden="true">Cancel</button>
+        <button class="btn pull-right" ng-click="vm.closeContactForm();" aria-hidden="true">Cancel</button>
       </div>
     </div>
   </div>
